layout bug fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,10 +193,16 @@ p {
 /* Activity Part */
 .gallery-section {
   width: 80%;
-  margin: 0 auto 6rem;
+  margin: 0 auto;
+  margin-bottom: 6rem;
 }
 .gallery-heading {
   margin-bottom: 2.5rem;
+}
+.gallery-cotainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .gallery {
   display: flex;
@@ -228,23 +234,7 @@ p {
 .gallery div:last-child > div img:last-child {
   height: 140px;
 }
-/* .gallery-part {
-  flex-shrink: 0;
-}
-.gallery div:first-child {
-  flex-basis: 30%;
-}
-.gallery div:nth-child(2) {
-  flex-basis: 40%;
-}
-.gallery div:last-child {
-  flex-basis: 30%;
-}
 
-.gallery div:first-child img:first-child,
-.gallery div:last-child img:last-child {
-  width: 200px;
-} */
 /* Testimonial Styles */
 .testimonial-section {
   text-align: start;
